--- a/build.xml
+++ b/build.xml
@@ -174,19 +174,19 @@
   </path>
   
   <path id="library.azure-sdk.classpath">
-    <pathelement location="${basedir}/lib/azure-sdk/azure-core-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-compute-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-media-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-network-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-scheduler-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-sql-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-storage-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-management-websites-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-media-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-servicebus-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-serviceruntime-0.7.0.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/azure-tracing-util-0.7.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-core-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-compute-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-media-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-network-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-scheduler-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-sql-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-storage-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-svc-mgmt-websites-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-media-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-servicebus-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-serviceruntime-0.9.0.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/azure-tracing-util-0.9.0.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/jackson-core-asl-1.9.2.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/jackson-jaxrs-1.9.2.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/jackson-mapper-asl-1.9.2.jar"/>
@@ -199,8 +199,8 @@
     <pathelement location="${basedir}/lib/azure-sdk/jettison-1.1.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/mail-1.4.5.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/annotation-detector-3.0.4.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/applicationinsights-core-1.0.1.jar"/>
-    <pathelement location="${basedir}/lib/azure-sdk/applicationinsights-web-1.0.1.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/applicationinsights-core-1.0.2.jar"/>
+    <pathelement location="${basedir}/lib/azure-sdk/applicationinsights-web-1.0.2.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/applicationinsights-management-1.0.2.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/commons-codec-1.6.jar"/>
     <pathelement location="${basedir}/lib/azure-sdk/commons-logging-1.1.3.jar"/>
@@ -216,7 +216,11 @@
   <path id="library.com.google.guava:guava:17.0.classpath">
     <pathelement location="${path.variable.maven_repository}/com/google/guava/guava/17.0/guava-17.0.jar"/>
   </path>
-  
+
+  <path id="library.commons-net:commons-net:3.3.classpath">
+    <pathelement location="${path.variable.maven_repository}/commons-net/commons-net/3.3/commons-net-3.3.jar"/>
+  </path>
+
   <path id="library.com.microsoft.azure:azure-storage:3.0.0.classpath">
     <pathelement location="${path.variable.maven_repository}/com/fasterxml/jackson/core/jackson-core/2.6.0/jackson-core-2.6.0.jar"/>
     <pathelement location="${path.variable.maven_repository}/com/microsoft/azure/azure-storage/3.0.0/azure-storage-3.0.0.jar"/>
@@ -375,19 +379,19 @@
     <copy file="${path.variable.maven_repository}/com/fasterxml/jackson/core/jackson-core/2.6.0/jackson-core-2.6.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/jackson-core-2.6.0.jar"/>
     <copy file="${path.variable.maven_repository}/org/slf4j/slf4j-api/1.7.12/slf4j-api-1.7.12.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/slf4j-api-1.7.12.jar"/>
     <copy file="${path.variable.maven_repository}/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/commons-lang3-3.4.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-core-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-core-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-compute-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-compute-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-media-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-media-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-network-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-network-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-scheduler-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-scheduler-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-sql-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-sql-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-storage-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-storage-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-management-websites-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-management-websites-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-media-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-media-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-servicebus-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-servicebus-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-serviceruntime-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-serviceruntime-0.7.0.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-tracing-util-0.7.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-tracing-util-0.7.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-core-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-core-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-compute-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-compute-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-media-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-media-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-network-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-network-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-scheduler-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-scheduler-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-sql-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-sql-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-storage-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-storage-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-svc-mgmt-websites-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-svc-mgmt-websites-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-media-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-media-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-servicebus-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-servicebus-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-serviceruntime-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-serviceruntime-0.9.0.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/azure-tracing-util-0.9.0.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/azure-tracing-util-0.9.0.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/jackson-core-asl-1.9.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/jackson-core-asl-1.9.2.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/jackson-jaxrs-1.9.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/jackson-jaxrs-1.9.2.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/jackson-mapper-asl-1.9.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/jackson-mapper-asl-1.9.2.jar"/>
@@ -400,14 +404,15 @@
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/jettison-1.1.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/jettison-1.1.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/mail-1.4.5.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/mail-1.4.5.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/annotation-detector-3.0.4.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/annotation-detector-3.0.4.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/applicationinsights-core-1.0.1.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/applicationinsights-core-1.0.1.jar"/>
-    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/applicationinsights-web-1.0.1.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/applicationinsights-web-1.0.1.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/applicationinsights-core-1.0.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/applicationinsights-core-1.0.2.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/applicationinsights-web-1.0.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/applicationinsights-web-1.0.2.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/applicationinsights-management-1.0.2.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/applicationinsights-management-1.0.2.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/commons-codec-1.6.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/commons-codec-1.6.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/commons-logging-1.1.3.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/commons-logging-1.1.3.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/commons-io-2.4.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/commons-io-2.4.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/httpclient-4.3.6.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/httpclient-4.3.6.jar"/>
     <copy file="${module.azure-services-explorer-plugin.basedir}/lib/azure-sdk/httpcore-4.3.jar" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/httpcore-4.3.jar"/>
+    <copy file="${module.azure-services-explorer-plugin.basedir}/lib/ThirdPartyNotices.txt" tofile="${tmp.dir.azure-services-explorer-plugin}/azure-services-explorer-plugin/lib/ThirdPartyNotices.txt"/>
     <zip destfile="${azure-services-explorer-plugin.plugin.path.jar}">
       <fileset dir="${module.azure-services-explorer-plugin.basedir}/../temp"/>
     </zip>
@@ -436,6 +441,7 @@
     <path refid="library.azure-activedirectory-interactive-auth-library-for-java.classpath"/>
     <path refid="library.com.google.guava:guava:17.0.classpath"/>
     <path refid="library.com.google.code.gson:gson:2.3.classpath"/>
+    <path refid="library.commons-net:commons-net:3.3.classpath"/>
     <path refid="library.com.microsoft.azure:azure-storage:3.0.0.classpath"/>
     <path refid="library.org.apache.httpcomponents:httpclient:4.3.6.classpath"/>
   </path>
@@ -451,6 +457,7 @@
     <path refid="library.azure-activedirectory-interactive-auth-library-for-java.classpath"/>
     <path refid="library.com.google.guava:guava:17.0.classpath"/>
     <path refid="library.com.google.code.gson:gson:2.3.classpath"/>
+    <path refid="library.commons-net:commons-net:3.3.classpath"/>
     <path refid="library.com.microsoft.azure:azure-storage:3.0.0.classpath"/>
     <path refid="library.org.apache.httpcomponents:httpclient:4.3.6.classpath"/>
   </path>
@@ -463,6 +470,7 @@
     <path refid="library.azure-activedirectory-interactive-auth-library-for-java.classpath"/>
     <path refid="library.com.google.guava:guava:17.0.classpath"/>
     <path refid="library.com.google.code.gson:gson:2.3.classpath"/>
+    <path refid="library.commons-net:commons-net:3.3.classpath"/>
     <path refid="library.com.microsoft.azure:azure-storage:3.0.0.classpath"/>
     <path refid="library.org.apache.httpcomponents:httpclient:4.3.6.classpath"/>
   </path>
